# cabrio

./: CMakeLists.txt  config.c  emulator.c  event.c  key.c  main.c  sdl_ogl.c  sdl_wrapper.c  snap.c  video.c
cmake/modules/: FindFFMPEG.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
data/: config.xml
include/: ogl.h  sdl_wrapper.h  sound.h
